--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,7 @@
   src: url('assets/fonts/Nunito-Regular.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
+  font-display: swap
 }
 
 @font-face {
@@ -11,6 +12,7 @@
   src: url('assets/fonts/Nunito-SemiBold.ttf') format('truetype');
   font-weight: 600;
   font-style: normal;
+  font-display: swap
 }
 
 @font-face {
@@ -18,6 +20,7 @@
   src: url('assets/fonts/Nunito-Bold.ttf') format('truetype');
   font-weight: 700;
   font-style: normal;
+  font-display: swap
 }
 
 * {
