--- a/src/components/sections/HeroSection/HeroSection.scss
+++ b/src/components/sections/HeroSection/HeroSection.scss
@@ -6,8 +6,8 @@
   align-items: center;
   text-align: center;
   color: white;
-  @media only screen and (min-width: $mobile) {
-  }
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url('/assets/images/background-image.webp');
+  background-size: cover;
 }
 
 .hero-content {
@@ -16,9 +16,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
   h1, .text-h1 {
     margin-top: 40px;
   }
+
   p, .text-p1 {
     margin-top: 21px;
   }
@@ -27,6 +29,7 @@
     margin-top: 32px;
     margin-bottom: 71px;
   }
+
   @media only screen and (min-width: $mobile) {
     width: 328px;
   }
