--- a/src/components/sections/HeroSection/HeroSection.scss
+++ b/src/components/sections/HeroSection/HeroSection.scss
@@ -6,8 +6,14 @@
   align-items: center;
   text-align: center;
   color: white;
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url('/assets/images/background-image.webp');
   background-size: cover;
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url('/assets/images/background-image-m.webp');
+  @media only screen and (min-width: $tablet) {
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url('/assets/images/background-image-t.webp');
+  }
+  @media only screen and (min-width: $desktop) {
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url('/assets/images/background-image.webp');
+  }
 }
 
 .hero-content {
