--- a/src/components/widgets/UsersTable/UsersTable.module.scss
+++ b/src/components/widgets/UsersTable/UsersTable.module.scss
@@ -3,16 +3,16 @@
 .userCards {
   margin-top: 50px;
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: minmax(0, 1fr);
   grid-gap: 20px;
 
   @media screen and (min-width: $tablet) {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, minmax(0, 1fr));
     grid-gap: 16px;
   }
 
   @media screen and (min-width: $desktop) {
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, minmax(0, 1fr));
     grid-gap: 29px;
   }
 }
